--- a/frontend/src/styles/login.css
+++ b/frontend/src/styles/login.css
@@ -1,8 +1,8 @@
-.form-text{
-    margin: 5px 0 8px 0;
+.form-text {
+    margin: 10px 0 13px 0;
 }
 
-.login-heading{
+.login-heading {
     width: 100%;
     color: blue;
     text-align: center;
@@ -11,12 +11,13 @@
     margin-bottom: 10px;
 }
 
-.login-container{
+.login-container {
     width: 400px;
+    max-width: 100%;
     margin: auto;
 }
 
-.login-body{
+.login-body {
     width: 100%;
     height: auto;
     padding: 10px 15px 50px 15px;
@@ -25,24 +26,25 @@
     box-shadow: 0 2px 4px rgb(0 0 0 / 10%), 0 8px 16px rgb(0 0 0 / 10%);
 }
 
-.login-body form{
+.login-body form {
     width: 100%;
 }
 
-.login-body form input{
+.login-body form input {
     margin: 5px 0;
-    width: 91%;
+    width: 100%;
     padding: 12px 16px;
     border: 1px solid grey;
     border-radius: 4px;
 }
-input:focus{
+
+input:focus {
     outline: none;
     border-color: #1b74e4;
     box-shadow: 0 0 0 2px #e7f3ff;
 }
 
-.login-btn{
+.login-btn {
     cursor: pointer;
     width: 100%;
     background-color: blue;
@@ -55,7 +57,7 @@ input:focus{
     font-size: 16px;
 }
 
-.link{
+.link {
     display: block;
     width: 100%;
     margin: 5px;
@@ -64,13 +66,13 @@ input:focus{
     text-decoration: none;
 }
 
-.line{
+.line {
     width: 100%;
     margin: 20px 0;
     border-top: 1px solid grey;
 }
 
-.sign-btn{
+.sign-btn {
     cursor: pointer;
     display: block;
     width: 60%;
@@ -84,9 +86,10 @@ input:focus{
     text-align: center;
     text-decoration: none;
 }
+
 /* For removing iNotebook heading on small device for a better viewing experience */
 @media screen and (max-width: 570px) {
-    .login-heading{
+    .login-heading {
         display: none;
     }
 }
